--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@ li{
 .nav-links a{
     color: white;
     text-decoration: none;
+    padding-bottom: 0.8rem;
 }
 .nav-links a:hover{
-    background-color: #3d0a0d;
-    padding: 0.8rem;
-    border-radius: 0.5rem;
+    border-bottom: white solid 0.1rem;
+    transition: 0.3s;
 }
 
 .logo{
@@ -105,9 +105,14 @@ li{
     box-shadow: 3px 4px 8px rgba(0,0,0,0.3);
     font-weight: 500;
 }
+.hero-btn{
+    font-size: 1.3;
+    font-weight: 500;
+}
 .btn:hover{
     cursor: pointer;
     background-color: rgb(212, 209, 209);
+    transition: 0.3s;
 }
 
 /* Services */
@@ -203,7 +208,21 @@ input{
     font-size: 2.5rem;
     margin-right: 0.8rem;
 }
-
+.fa-facebook:hover{
+    color: rgb(36, 36, 211);
+    transition: 0.3s;
+}
+.fa-instagram:hover{
+    color: purple;
+    transition: 0.3s;
+}
+.fa-whatsapp:hover{
+    color: #00D462;
+    transition: 0.3s;
+}
+a{
+    text-decoration: none;
+}
 /* Footer */
 footer{
     background: black;
@@ -229,6 +248,14 @@ footer{
     flex-direction: column;
     font-size: 1.2rem;
     gap: 0.5rem;
+}
+.footer-links{
+    text-decoration: none;
+    color: white;
+}
+.footer-links:hover{
+    border-bottom: solid 0.1rem white;
+    transition: 0.3s;
 }
 
 /* Sub Footer */
